<?xml version="1.0" encoding="utf-8"?>
<!--
    The four tabs in the bottom navigation bar.

    Four is the practical maximum for a bottom bar. Beyond that the labels get
    squashed and the touch targets become too small.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_pantry"
        android:icon="@drawable/ic_nav_pantry"
        android:title="@string/nav_pantry" />

    <item
        android:id="@+id/nav_suggested"
        android:icon="@drawable/ic_nav_suggested"
        android:title="@string/nav_suggested" />

    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_nav_recipes"
        android:title="@string/nav_recipes" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

</menu>
